--- a/index.html
+++ b/index.html
@@ -5,21 +5,24 @@
     <link href="css/styles.css" rel="stylesheet" type="text/css">
     <script src="js/jquery-3.2.1.js"></script>
     <script src="js/scripts.js"></script>
-    <title>leap year</title>
+    <title>Leap year detector</title>
   </head>
   <body>
     <div class="container">
-        <h1>Leap year detector</h1>
-          <form id="leap-year">
-            <div class="form-group">
-              <label for="year">Enter a year</label>
-              <input id="year" type="text">
-            </div>
-            <button type="submit" class="btn">Find out!</button>
-          </form>
+      <h1>Leap year detector</h1>
 
-          <div id="result">
-          </div>
+      <form id="leap-year">
+        <div class="form-group">
+          <label for="year">Enter a year and find out if it's a leap year:</label>
+          <input id="year" type="text">
+        </div>
+
+        <button type="submit" class="btn">Find out!</button>
+      </form>
+
+      <div id="result">
+        <p><span class="year"></span> is <span class="not"></span> a leap year.</p>
       </div>
+    </div>
   </body>
 </html>
